logs/powertools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/colored_traceback'...
Listing './lib/python3.5/site-packages/colored_traceback/always'...
Listing './lib/python3.5/site-packages/colored_traceback/auto'...
Listing './lib/python3.5/site-packages/colored_traceback-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/coloredlogs'...
Listing './lib/python3.5/site-packages/coloredlogs-8.0.dist-info'...
Listing './lib/python3.5/site-packages/humanfriendly'...
Listing './lib/python3.5/site-packages/humanfriendly-4.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/powertools'...
Compiling './lib/python3.5/site-packages/powertools/click.py'...
***   File "./lib/python3.5/site-packages/powertools/click.py", line 288
    f'{f} must be a generator function.\n'
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/powertools/print.py'...
***   File "./lib/python3.5/site-packages/powertools/print.py", line 28
    list( pfunc( f'{str(key):<12}:', value ) for key, value in d.items( ) )
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/powertools/setup'...
Compiling './lib/python3.5/site-packages/powertools/std.py'...
***   File "./lib/python3.5/site-packages/powertools/std.py", line 18
    return f'{obj.__module__}.{obj.__qualname__}'
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/powertools/term.py'...
***   File "./lib/python3.5/site-packages/powertools/term.py", line 12
    cprint = lambda color, *args, bold=True,: (
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/powertools-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
